Add basic sync/async answering framework
